<resources>
    <string name="app_name" translatable="false">AutoInfo</string>
    <string name="home">Home</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="account" translatable="false">Account</string>

    <string name="ozbek" translatable="false">O\'zbek</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>

    <string name="look">look</string>
    <string name="check_fine">DYHXX jarimasini tekshirish</string>
    <string name="auth_description">Dasturdan to\'liq foydalanish uchun telegram orqali ro\'yhatdan o\'ting</string>
    <string name="auth_by_telegram">Telegram orqali bog\'lanish</string>
    <string name="add_car">Avtomobil qo\'shish</string>


    <string name="car_number">Avtomobil raqami</string>
    <string name="tex_pas_series">Tex.pas. seriyasi</string>
    <string name="tex_pass_number">Tex.pass raqam</string>
    <string name="car_mark">Avtomobil markasi</string>
    <string name="car_models">Avtomobil modeli</string>
    <string name="select">Tanlash</string>
    <string name="save">Tasdiqlash</string>
    <string name="close">Yopish</string>

    <string name="welcome">Xush kelibsiz</string>
    <string name="my_profile">Mening profilim</string>
    <string name="language">Til</string>
    <string name="about_app">Dastur haqida</string>

    <string name="car_model">Turi:</string>
    <string name="car_marks">Markasi:</string>
    <string name="text_pass_series_numbers">Tex.pass. seriyasi va raqami:</string>
    <string name="country_number">Davlat raqami:</string>
    <string name="not_ethernet">Tarmoqqa ulanmagan</string>
    <string name="wrong_lines">Iltimos qatorlarni to\'ldiring.</string>
    <string name="bug_server">Serverda xatolik</string>
    <string name="limit_full">Limit to\'lgan</string>
    <string name="car_not_found">Noto\'g\'ri ma\'lumotlar, iltimos tekshiring.</string>
    <string name="car_exist">Avval ro\'yxatga olingan</string>
    <string name="bad_request">Ro\'yhatdan o\'tmagan foydalanuvchi</string>
    <string name="delete_dialog_title">Siz rostan ham ushbu avtomobilni o\'chirmoqchisiz?</string>
    <string name="yes">ha</string>
    <string name="no">yo\'q</string>
    <string name="fine_time">Jarima vaqti:</string>
    <string name="violation_act">Qaror:</string>
    <string name="violation_type">Jarima turi:</string>
    <string name="violation_location">Qayd etilgan hudud:</string>
    <string name="violation_sum">Jarima miqdori:</string>
    <string name="no_violation">Jarimalar mavjud emas!</string>
    <string name="will_be_soon_notification">Ushbu bo’lim tez orada ishga tushadi</string>
    <string name="typing_model">Modelni kiriting</string>
    <string name="other">Boshqa</string>
    <string name="no_connect">Internetga ulanishda xatolik sodir bo’ldi</string>
    <string name="total_violation">Jarimalar umumiy miqdori so\'mda</string>
    <string name="sum">so\'m</string>
    <string name="log_out_massege">Siz rosdan ham tizim chiqmoqchimisiz?</string>
    <string name="you_no_cars">Sizda avtomobil mavud emas</string>
    <string name="pls_add_car">Iltimos avtomobil qo\'shing</string>
    <string name="we_happy">Tashrifingizdan mamnunmiz</string>
    <string name="inconvenience">Noqulayliklar uchun uzr so\'raymiz</string>
    <string name="save_file">Yuklash</string>
    <string name="content_des" translatable="false">PDF PAGE</string>
    <string name="account_bugs_to_bot">Ilovadagi xatoliklar</string>
    <string name="rate">Baholash</string>


    <string name="select_language">Tilni tanlang</string>
    <string name="delete">O\'chirish</string>
    <string name="violation">Jarimalar</string>
    <string name="loading">Yuklanmoqda…</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="too_many_requests">Too Many Requests</string>
    <string name="see_decision">Qarorni ko\'rish</string>
    <string name="violation_video">Video ma\'lumot</string>
    <string name="violation_owing">To\'lanmagan</string>
    <string name="settings">Settings</string>
    <string name="pay_violation">Jarimani to\'lash</string>

    <string name="about_app_text">AutoInfo -  Yo\'l harakati qoidalarini buzganlik uchun jarimalar mavjudligini tekshirish, 30%li chegirma muddatidan xabardor bo\'lish va jarimalarni ortiqcha qog\'ozbozliklarsiz, banklarga bormasdan to\'lash uchun ishonchli va qulay mobil ilova.\n
AutoInfo ilovasidan foydalanib, siz:\n
 - Ilovada juda oson va tez ro\'yxatdan o\'tish\n
 - 8tagacha avtotransport vositasini ro\'yxatga qo\'shish\n
 - Har bir avtotransportlaringizda mavjud bo\'lgan jarimalarni ko\'rish\n
 - To\'lanmagan jarima summasi haqida umumiy ma\'lumotni korib turish\n
 - Jarima qarorini PDF formatda ko\'rish va yuklab olish\n
 -  Jarimalarning foto, video va joylashuvini(xaritada) ko\'rish\n
 - Jarimalaringizda 30\%li chegirmaning mavjudligini hamda chegirma muddatidan xabardor bo\'lish\n
 - Jarimalarni Click, Payme va UPay ilovalari orqali to\'lash\n
 - va boshqa yana ko\'plab kundan kun qo\'shilayotgan imkoniyatlarga ega bo\'lasiz.</string>

</resources>