<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_globe"
        android:drawablePadding="14dp"
        android:padding="10dp"
        android:id="@+id/uzbek"
        android:textSize="18sp"
        android:text="@string/ozbek"
        android:textColor="@color/dark_blue" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rus"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_globe"
        android:drawablePadding="14dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/russian"
        android:textColor="@color/dark_blue" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/english"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_globe"
        android:drawablePadding="14dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/english"
        android:textColor="@color/dark_blue" />



</androidx.appcompat.widget.LinearLayoutCompat>