<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:gravity="center"
        android:padding="14dp"
        android:id="@+id/delete_dialog_title"
        android:text="@string/delete_dialog_title"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintEnd_toStartOf="@id/delete_dialog_no"
        android:id="@+id/delete_dialog_yes"
        app:layout_constraintTop_toBottomOf="@id/delete_dialog_title"
        app:layout_constraintStart_toStartOf="@id/delete_dialog_title"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/delete_dialog_no"
        app:layout_constraintTop_toBottomOf="@id/delete_dialog_title"
        app:layout_constraintEnd_toEndOf="@id/delete_dialog_title"
        app:layout_constraintStart_toEndOf="@id/delete_dialog_yes"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>