<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/background_white_gray_stoke"
    android:orientation="vertical"
    android:padding="14dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/red"
        android:id="@+id/violation_time"
        android:textSize="14sp"
        tools:text="@string/fine_time" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/violation_act"
        android:paddingTop="12dp"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_semibold"
        tools:text="AAC 123456789"
        android:id="@+id/violation_act"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/violation_type"
        android:paddingTop="12dp"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/violation_type"
        android:fontFamily="@font/gilroy_semibold"
        tools:text="Xavfsizlik kamarini taqmaganlik uchun"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/violation_location"
        android:paddingTop="12dp"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_semibold"
        tools:text="Toshkent shahri, Olmazor tumani, Bunyodkor shox ko’chasi, Adiblar hiyoboni qarshisi"
        android:paddingTop="10dp"
        android:id="@+id/violation_location"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/violation_sum"
        android:paddingTop="12dp"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        tools:text="245 000 so'm"
        android:id="@+id/violation_sum"
        android:paddingTop="10dp"
        android:textColor="@color/green"
        android:textSize="16sp" />


</androidx.appcompat.widget.LinearLayoutCompat>