<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/select_language_fragment_title"
            android:text="@string/select_language"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_medium"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/select_language_fragment_short_desc"
            android:text="Dastur interfeysidan qaysi til orqali foydalanmoqchisiz?"
            android:gravity="center"
            android:paddingTop="28dp"
            android:paddingBottom="36dp"
            android:lineSpacingExtra="12dp"
            android:textSize="13dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_medium"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_button_uz"
            style="@style/ButtonStyle"
            android:textColor="@color/select_language_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/language_button_background"
            android:padding="6dp"
            android:text="@string/ozbek" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_button_ru"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/select_language_text_color"
            android:background="@drawable/language_button_background"
            android:padding="6dp"
            android:text="@string/russian" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_button_en"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/select_language_text_color"
            android:background="@drawable/language_button_background"
            android:padding="6dp"
            android:text="@string/english" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>