<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/account_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:paddingTop="12dp"
        android:text="@string/account"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/white_rectangle_with_small_radius"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_fragment_toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawableStart="@drawable/ic_profile_account"
            android:drawableEnd="@drawable/ic_right_arrow_in_rectangle_account"
            android:drawablePadding="14dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/my_profile"
            android:textColor="@color/dark_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_fragment_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:fontFamily="@font/gilroy_semibold"
            android:drawableStart="@drawable/ic_globe"
            android:drawableEnd="@drawable/ic_right_arrow_in_rectangle_account"
            android:drawablePadding="14dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/language"
            android:textColor="@color/dark_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/gilroy_semibold"
            android:drawableStart="@drawable/ic_paper"
            android:drawablePadding="14dp"
            android:padding="10dp"
            android:text="@string/about_app"
            android:textColor="@color/dark_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:fontFamily="@font/gilroy_semibold"
            android:drawableStart="@drawable/ic_pencil"
            android:drawablePadding="14dp"
            android:padding="10dp"
            android:text="@string/rate"
            android:textColor="@color/dark_blue" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_feed_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/gilroy_semibold"
            android:drawableStart="@drawable/ic_about"
            android:drawablePadding="14dp"
            android:padding="10dp"
            android:text="@string/account_bugs_to_bot"
            android:textColor="@color/dark_blue" />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_fragment_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/gilroy_semibold"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="14dp"
            android:padding="10dp"
            android:text="@string/account_bugs_to_bot"
            android:textColor="@color/red" />


    </androidx.appcompat.widget.LinearLayoutCompat>
<!--
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/account_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="version 1.0.1" />-->

</androidx.constraintlayout.widget.ConstraintLayout>