<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_car_fragment_toolBar"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_car_fragment_container_add_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/add_car_fragment_toolBar">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_medium"
            android:paddingBottom="4dp"
            android:text="@string/car_number"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/add_car_fragment_et_car_number"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_gray_stoke"
            android:fontFamily="@font/gilroy_medium"
            android:hint="00 A 000 AA"
            android:padding="12dp"
            android:textColorHint="@color/pale_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_car_fragment_container_tex_passport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="@id/add_car_fragment_container_add_car"
        app:layout_constraintTop_toBottomOf="@id/add_car_fragment_container_add_car">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/add_car_fragment_toolBar">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:paddingBottom="4dp"
                android:text="@string/tex_pas_series"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:id="@+id/add_car_fragment_tex_pass_series"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_gray_stoke"
                android:fontFamily="@font/gilroy_medium"
                android:hint="AAA"
                android:textColorHint="@color/pale_text"
                android:padding="12dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/add_car_fragment_toolBar">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:paddingBottom="4dp"
                android:text="@string/tex_pass_number"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_car_fragment_tex_pass_number"
                android:background="@drawable/background_white_gray_stoke"
                android:fontFamily="@font/gilroy_medium"
                android:hint="01234567"
                android:padding="12dp"
                android:textColorHint="@color/pale_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_car_fragment_container_car_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/add_car_fragment_container_tex_passport">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_medium"
            android:paddingBottom="4dp"
            android:text="@string/car_mark"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:prompt="@string/select"
            android:id="@+id/add_car_fragment_spinner_car_marks"
            android:background="@drawable/background_white_gray_stoke"
            android:fontFamily="@font/gilroy_medium"
            android:padding="12dp"
            android:textColor="@color/pale_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_car_fragment_container_car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/add_car_fragment_container_car_mark">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_medium"
            android:paddingBottom="4dp"
            android:text="@string/car_models"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/background_white_gray_stoke"
            android:fontFamily="@font/gilroy_medium"
            android:hint="@string/select"
            android:padding="12dp"
            android:id="@+id/add_car_fragment_spinner_car_models"
            android:textColor="@color/pale_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingTop="20dp"
        android:paddingEnd="60dp"
        app:layout_constraintEnd_toEndOf="@id/add_car_fragment_container_car_model"
        app:layout_constraintStart_toStartOf="@id/add_car_fragment_container_car_model"
        app:layout_constraintTop_toBottomOf="@id/add_car_fragment_container_car_model">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_car_fragment_button_save"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_car_fragment_button_cancel"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/pale_text"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>